public/index.css
html {
    overflow: hidden;
}

#gameDiv {
    text-align: center;
    margin: 0 auto;
}

canvas {
    
}

.options {
    position: fixed;
    top: 0;
    left: 0;
}

#gamepad {
    text-align: center;
    margin-top: -10em;
    margin-left: auto;
    margin-right: auto;
    position: absolute;
    bottom: 0;
    width: 100%;
}

.virtualKey {
    width: 5em;
    height: 5em;
    opacity: 0.6;
}

.topGamepad {
    height: 50%;
}

.bottomGamepad {
    height: 50%;
}

body {
    background-color: lightgray;
}

select {
    text-align: center;
}

#extra {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    overflow: auto;

    visibility: hidden;
}

#extraMenu {
    font-size: 2.5em;
    background-color: darkgray;
    padding: 0em 0.33em;
    transition: 0.12s;
    opacity: 0.3;
    text-decoration: none;
    color: black;
    visibility: visible;
}

#extraMenu:hover {
    opacity: 1;
}


#extraContainer {
    text-align: center;
    position: absolute;
    left: 1em;
    top: 1em;
    
    width: 10%;
}

